--- a/index.html
+++ b/index.html
@@ -69,9 +69,17 @@
                 method: 'POST',
                 body: formData
             })
-            .then(response => response.text())
-            .then(data => alert('¡Gracias por tu mensaje!'))
-            .catch(error => alert('Hubo un error, por favor intenta de nuevo.'));
+            .then(response => {
+                if (response.ok) {
+                    alert('¡Gracias por tu mensaje!');
+                    form.reset();  // Limpiar el formulario después de enviarlo
+                } else {
+                    alert('Hubo un error, por favor intenta de nuevo.');
+                }
+            })
+            .catch(error => {
+                alert('Hubo un error, por favor intenta de nuevo.');
+            });
         });
     </script>
 </body>
