--- a/index.html
+++ b/index.html
@@ -1,86 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Contacto</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .form-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
-        }
-        input, textarea, button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Contacto</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .form-container {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+    input, textarea, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-    <div class="form-container">
-        <h2>Formulario de Contacto</h2>
-        <form id="contact-form">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" required>
+  <div class="form-container">
+    <h2>Formulario de Contacto</h2>
+    <form id="contact-form">
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" name="name" required>
 
-            <label for="email">Correo electrónico:</label>
-            <input type="email" id="email" name="email" required>
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" name="email" required>
 
-            <label for="message">Mensaje:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
+      <label for="message">Mensaje:</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button type="submit">Enviar</button>
-        </form>
-    </div>
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
 
-    <script>
-        const form = document.getElementById('contact-form');
-        form.addEventListener('submit', function(event) {
-            event.preventDefault(); // Evitar que se recargue la página
+  <script>
+    const form = document.getElementById('contact-form');
 
-            const formData = new FormData(form);
+    form.addEventListener('submit', function(event) {
+      event.preventDefault(); // Evita que se recargue la página
 
-            fetch('https://script.google.com/macros/s/AKfycbycs4KGiksC8FX4B7HvjH-NPRYy8sAwNQ-6Zc9DuByXM4JUmndkftqOrpnCCv504ZJT/exec', {  // Sustituye "TU_URL_DE_WEB_APP" por la URL que obtuviste
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
-                if (response.ok) {
-                    alert('¡Gracias por tu mensaje!');
-                    form.reset();  // Limpiar el formulario después de enviarlo
-                } else {
-                    alert('Hubo un error, por favor intenta de nuevo.');
-                }
-            })
-            .catch(error => {
-                alert('Hubo un error, por favor intenta de nuevo.');
-            });
-        });
-    </script>
+      const formData = new FormData(form);
+
+      fetch('https://script.google.com/macros/s/AKfycbycs4KGiksC8FX4B7HvjH-NPRYy8sAwNQ-6Zc9DuByXM4JUmndkftqOrpnCCv504ZJT/exec', {
+        method: 'POST',
+        body: formData
+      })
+      .then(response => response.json()) // Esperamos JSON desde Apps Script
+      .then(data => {
+        if (data.result === 'success') {
+          alert('¡Gracias por tu mensaje!');
+          form.reset(); // Limpia el formulario
+        } else {
+          alert('Hubo un error en el servidor. Intenta de nuevo.');
+        }
+      })
+      .catch(error => {
+        console.error('Error de conexión:', error);
+        alert('Hubo un error de conexión. Intenta de nuevo.');
+      });
+    });
+  </script>
 </body>
 </html>
