--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       height: 100vh;
       margin: 0;
     }
+
     .form-container {
       background: #fff;
       padding: 20px;
@@ -21,7 +22,14 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       max-width: 400px;
       width: 100%;
+      position: relative;
     }
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+
     input, textarea, button {
       width: 100%;
       padding: 10px;
@@ -29,16 +37,46 @@
       border-radius: 5px;
       border: 1px solid #ccc;
       font-size: 1rem;
+      box-sizing: border-box;
     }
+
     button {
       background-color: #4CAF50;
       color: white;
       border: none;
       cursor: pointer;
       font-weight: bold;
+      transition: background-color 0.2s ease;
     }
+
     button:hover {
       background-color: #45a049;
+    }
+
+    .message {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 0.95rem;
+      display: none;
+      padding: 8px;
+      border-radius: 5px;
+    }
+
+    .message.success {
+      background-color: #e8f5e9;
+      color: #2e7d32;
+      border: 1px solid #81c784;
+    }
+
+    .message.error {
+      background-color: #ffebee;
+      color: #c62828;
+      border: 1px solid #ef9a9a;
+    }
+
+    .loading {
+      opacity: 0.6;
+      pointer-events: none;
     }
   </style>
 </head>
@@ -55,31 +93,51 @@
       <label for="message">Mensaje:</label>
       <textarea id="message" name="message" rows="4" required></textarea>
 
-      <button type="submit">Enviar</button>
+      <button type="submit" id="submit-btn">Enviar</button>
     </form>
+
+    <div id="status-message" class="message"></div>
   </div>
 
   <script>
     const form = document.getElementById('contact-form');
+    const statusMessage = document.getElementById('status-message');
+    const submitBtn = document.getElementById('submit-btn');
 
-    form.addEventListener('submit', (event) => {
+    form.addEventListener('submit', async (event) => {
       event.preventDefault();
+      submitBtn.disabled = true;
+      submitBtn.textContent = "Enviando...";
+      form.classList.add("loading");
+      statusMessage.style.display = "none";
 
       const formData = new FormData(form);
 
-      fetch('https://script.google.com/macros/s/AKfycbyG-iV8_1P5n_-FYcRNLLfH13mAbyMsLYTa-1-LFOX7_YLGvErmI_s_np-utmAxfR1QtQ/exec', {
-        method: 'POST',
-        mode: 'no-cors', // ⚠️ Ignora CORS
-        body: formData
-      })
-      .then(() => {
-        alert('¡Gracias por tu mensaje!');
+      try {
+        await fetch('https://script.google.com/macros/s/AKfycbyG-iV8_1P5n_-FYcRNLLfH13mAbyMsLYTa-1-LFOX7_YLGvErmI_s_np-utmAxfR1QtQ/exec', {
+          method: 'POST',
+          mode: 'no-cors', // evita errores CORS
+          body: formData
+        });
+
+        // Mostrar mensaje de éxito
+        statusMessage.textContent = "✅ ¡Datos registrados correctamente!";
+        statusMessage.className = "message success";
+        statusMessage.style.display = "block";
+
+        // Limpiar formulario
         form.reset();
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-        alert('Hubo un error de conexión. Intenta de nuevo.');
-      });
+
+      } catch (error) {
+        console.error("Error:", error);
+        statusMessage.textContent = "❌ Ocurrió un error, por favor intenta de nuevo.";
+        statusMessage.className = "message error";
+        statusMessage.style.display = "block";
+      } finally {
+        form.classList.remove("loading");
+        submitBtn.disabled = false;
+        submitBtn.textContent = "Enviar";
+      }
     });
   </script>
 </body>
