--- a/index.html
+++ b/index.html
@@ -4,74 +4,132 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Formulario de Contacto</title>
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+    /* ====== ESTILO GENERAL ====== */
+    :root {
+      --bg-gradient: linear-gradient(135deg, #f0f4ff, #d9e4ff);
+      --primary: #3b82f6;
+      --primary-hover: #2563eb;
+      --text-dark: #1f2937;
+      --text-light: #6b7280;
+      --success-bg: #e8f5e9;
+      --success-color: #2e7d32;
+      --error-bg: #ffebee;
+      --error-color: #c62828;
     }
 
+    body {
+      margin: 0;
+      font-family: 'Inter', Arial, sans-serif;
+      background: var(--bg-gradient);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      color: var(--text-dark);
+    }
+
+    /* ====== FORMULARIO ====== */
     .form-container {
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
+      background: rgba(255, 255, 255, 0.6);
+      backdrop-filter: blur(12px);
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
       width: 100%;
-      position: relative;
+      max-width: 420px;
+      transition: transform 0.3s ease;
+      animation: fadeIn 0.8s ease;
+    }
+
+    .form-container:hover {
+      transform: translateY(-3px);
     }
 
     h2 {
       text-align: center;
-      color: #333;
+      margin-bottom: 1.2rem;
+      font-weight: 600;
+      letter-spacing: -0.5px;
     }
 
-    input, textarea, button {
+    label {
+      font-weight: 500;
+      font-size: 0.9rem;
+      color: var(--text-light);
+    }
+
+    input,
+    textarea {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      box-sizing: border-box;
+      padding: 12px 14px;
+      margin-top: 6px;
+      margin-bottom: 16px;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      background-color: rgba(255, 255, 255, 0.8);
+      transition: border-color 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    input:focus,
+    textarea:focus {
+      border-color: var(--primary);
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.2);
     }
 
     button {
-      background-color: #4CAF50;
+      width: 100%;
+      padding: 12px;
+      background-color: var(--primary);
       color: white;
       border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 600;
       cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.2s ease;
+      transition: background-color 0.25s ease, transform 0.15s ease;
     }
 
     button:hover {
-      background-color: #45a049;
+      background-color: var(--primary-hover);
+      transform: translateY(-2px);
     }
 
+    button:disabled {
+      background-color: #93c5fd;
+      cursor: not-allowed;
+    }
+
+    /* ====== MENSAJE DE ESTADO ====== */
     .message {
       text-align: center;
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 0.95rem;
       display: none;
-      padding: 8px;
-      border-radius: 5px;
+      padding: 10px;
+      border-radius: 6px;
+      animation: fadeIn 0.5s ease;
     }
 
     .message.success {
-      background-color: #e8f5e9;
-      color: #2e7d32;
+      background-color: var(--success-bg);
+      color: var(--success-color);
       border: 1px solid #81c784;
     }
 
     .message.error {
-      background-color: #ffebee;
-      color: #c62828;
+      background-color: var(--error-bg);
+      color: var(--error-color);
       border: 1px solid #ef9a9a;
+    }
+
+    /* ====== ANIMACIONES ====== */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .loading {
@@ -80,20 +138,22 @@
     }
   </style>
 </head>
+
 <body>
   <div class="form-container">
-    <h2>Formulario de Contacto</h2>
+    <h2>Contáctame</h2>
+
     <form id="contact-form">
-      <label for="name">Nombre:</label>
-      <input type="text" id="name" name="name" required>
+      <label for="name">Nombre</label>
+      <input type="text" id="name" name="name" placeholder="Tu nombre" required>
 
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required>
+      <label for="email">Correo electrónico</label>
+      <input type="email" id="email" name="email" placeholder="tucorreo@ejemplo.com" required>
 
-      <label for="message">Mensaje:</label>
-      <textarea id="message" name="message" rows="4" required></textarea>
+      <label for="message">Mensaje</label>
+      <textarea id="message" name="message" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
 
-      <button type="submit" id="submit-btn">Enviar</button>
+      <button type="submit" id="submit-btn">Enviar mensaje</button>
     </form>
 
     <div id="status-message" class="message"></div>
@@ -106,6 +166,7 @@
 
     form.addEventListener('submit', async (event) => {
       event.preventDefault();
+
       submitBtn.disabled = true;
       submitBtn.textContent = "Enviando...";
       form.classList.add("loading");
@@ -116,27 +177,31 @@
       try {
         await fetch('https://script.google.com/macros/s/AKfycbyG-iV8_1P5n_-FYcRNLLfH13mAbyMsLYTa-1-LFOX7_YLGvErmI_s_np-utmAxfR1QtQ/exec', {
           method: 'POST',
-          mode: 'no-cors', // evita errores CORS
+          mode: 'no-cors',
           body: formData
         });
 
-        // Mostrar mensaje de éxito
-        statusMessage.textContent = "✅ ¡Datos registrados correctamente!";
+        // Éxito
+        statusMessage.textContent = "✅ ¡Tu mensaje se ha enviado correctamente!";
         statusMessage.className = "message success";
         statusMessage.style.display = "block";
 
-        // Limpiar formulario
         form.reset();
+
+        // Ocultar mensaje luego de unos segundos
+        setTimeout(() => {
+          statusMessage.style.display = "none";
+        }, 5000);
 
       } catch (error) {
         console.error("Error:", error);
-        statusMessage.textContent = "❌ Ocurrió un error, por favor intenta de nuevo.";
+        statusMessage.textContent = "❌ Ocurrió un error. Intenta de nuevo.";
         statusMessage.className = "message error";
         statusMessage.style.display = "block";
       } finally {
         form.classList.remove("loading");
         submitBtn.disabled = false;
-        submitBtn.textContent = "Enviar";
+        submitBtn.textContent = "Enviar mensaje";
       }
     });
   </script>
