--- a/index.html
+++ b/index.html
@@ -3,155 +3,155 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formulario de Contacto</title>
+  <title>Formulario de Contacto Profesional</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
-    /* ====== ESTILO GENERAL ====== */
-    :root {
-      --bg-gradient: linear-gradient(135deg, #f0f4ff, #d9e4ff);
-      --primary: #3b82f6;
-      --primary-hover: #2563eb;
-      --text-dark: #1f2937;
-      --text-light: #6b7280;
-      --success-bg: #e8f5e9;
-      --success-color: #2e7d32;
-      --error-bg: #ffebee;
-      --error-color: #c62828;
+    * {
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
       margin: 0;
-      font-family: 'Inter', Arial, sans-serif;
-      background: var(--bg-gradient);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 0;
       height: 100vh;
-      color: var(--text-dark);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: url('https://images.unsplash.com/photo-1502877338535-766e1452684a?auto=format&fit=crop&w=1500&q=80') 
+                  no-repeat center center/cover;
+      overflow: hidden;
     }
 
-    /* ====== FORMULARIO ====== */
-    .form-container {
-      background: rgba(255, 255, 255, 0.6);
-      backdrop-filter: blur(12px);
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 420px;
-      transition: transform 0.3s ease;
-      animation: fadeIn 0.8s ease;
+    /* ===== Overlay oscuro ===== */
+    body::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.55);
+      backdrop-filter: blur(4px);
+      z-index: 0;
     }
 
-    .form-container:hover {
-      transform: translateY(-3px);
+    /* ===== Contenedor del formulario ===== */
+    .form-box {
+      position: relative;
+      z-index: 1;
+      width: 380px;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      border-radius: 20px;
+      backdrop-filter: blur(15px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      padding: 2rem 2.5rem;
+      color: #fff;
+      animation: fadeIn 1s ease;
     }
 
-    h2 {
+    .form-box h2 {
       text-align: center;
+      font-size: 1.8rem;
       margin-bottom: 1.2rem;
       font-weight: 600;
-      letter-spacing: -0.5px;
+      letter-spacing: 1px;
     }
 
-    label {
-      font-weight: 500;
-      font-size: 0.9rem;
-      color: var(--text-light);
+    /* ===== Inputs animados ===== */
+    .input-group {
+      position: relative;
+      margin-bottom: 1.6rem;
     }
 
-    input,
-    textarea {
+    .input-group input, 
+    .input-group textarea {
       width: 100%;
-      padding: 12px 14px;
-      margin-top: 6px;
-      margin-bottom: 16px;
-      border: 1px solid #d1d5db;
-      border-radius: 8px;
-      font-size: 0.95rem;
-      background-color: rgba(255, 255, 255, 0.8);
-      transition: border-color 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    input:focus,
-    textarea:focus {
-      border-color: var(--primary);
+      padding: 12px 40px 12px 12px;
+      font-size: 1rem;
+      border: none;
       outline: none;
-      box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.2);
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.15);
+      color: #fff;
+      transition: 0.3s ease;
     }
 
+    .input-group input::placeholder,
+    .input-group textarea::placeholder {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    .input-group input:focus,
+    .input-group textarea:focus {
+      background: rgba(255, 255, 255, 0.25);
+      box-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
+    }
+
+    /* Íconos dentro del input */
+    .input-group i {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    /* ===== Botón ===== */
     button {
       width: 100%;
       padding: 12px;
-      background-color: var(--primary);
-      color: white;
+      background: linear-gradient(90deg, #4f46e5, #06b6d4);
       border: none;
-      border-radius: 8px;
-      font-size: 1rem;
+      border-radius: 10px;
+      color: #fff;
       font-weight: 600;
       cursor: pointer;
-      transition: background-color 0.25s ease, transform 0.15s ease;
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: var(--primary-hover);
       transform: translateY(-2px);
+      background: linear-gradient(90deg, #06b6d4, #4f46e5);
+      box-shadow: 0 4px 15px rgba(6, 182, 212, 0.4);
     }
 
-    button:disabled {
-      background-color: #93c5fd;
-      cursor: not-allowed;
-    }
-
-    /* ====== MENSAJE DE ESTADO ====== */
+    /* ===== Mensaje ===== */
     .message {
       text-align: center;
       margin-top: 12px;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       display: none;
-      padding: 10px;
-      border-radius: 6px;
       animation: fadeIn 0.5s ease;
     }
 
-    .message.success {
-      background-color: var(--success-bg);
-      color: var(--success-color);
-      border: 1px solid #81c784;
-    }
+    .message.success { color: #00e676; }
+    .message.error { color: #ff5252; }
 
-    .message.error {
-      background-color: var(--error-bg);
-      color: var(--error-color);
-      border: 1px solid #ef9a9a;
-    }
-
-    /* ====== ANIMACIONES ====== */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
-    }
-
-    .loading {
-      opacity: 0.6;
-      pointer-events: none;
     }
   </style>
 </head>
 
 <body>
-  <div class="form-container">
+  <div class="form-box">
     <h2>Contáctame</h2>
-
     <form id="contact-form">
-      <label for="name">Nombre</label>
-      <input type="text" id="name" name="name" placeholder="Tu nombre" required>
+      <div class="input-group">
+        <input type="text" id="name" name="name" placeholder="Tu nombre" required>
+        <i>👤</i>
+      </div>
 
-      <label for="email">Correo electrónico</label>
-      <input type="email" id="email" name="email" placeholder="tucorreo@ejemplo.com" required>
+      <div class="input-group">
+        <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
+        <i>✉️</i>
+      </div>
 
-      <label for="message">Mensaje</label>
-      <textarea id="message" name="message" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
+      <div class="input-group">
+        <textarea id="message" name="message" rows="3" placeholder="Tu mensaje..." required></textarea>
+        <i>💬</i>
+      </div>
 
       <button type="submit" id="submit-btn">Enviar mensaje</button>
     </form>
@@ -169,7 +169,6 @@
 
       submitBtn.disabled = true;
       submitBtn.textContent = "Enviando...";
-      form.classList.add("loading");
       statusMessage.style.display = "none";
 
       const formData = new FormData(form);
@@ -181,14 +180,11 @@
           body: formData
         });
 
-        // Éxito
-        statusMessage.textContent = "✅ ¡Tu mensaje se ha enviado correctamente!";
+        statusMessage.textContent = "✅ ¡Mensaje enviado correctamente!";
         statusMessage.className = "message success";
         statusMessage.style.display = "block";
-
         form.reset();
 
-        // Ocultar mensaje luego de unos segundos
         setTimeout(() => {
           statusMessage.style.display = "none";
         }, 5000);
@@ -199,7 +195,6 @@
         statusMessage.className = "message error";
         statusMessage.style.display = "block";
       } finally {
-        form.classList.remove("loading");
         submitBtn.disabled = false;
         submitBtn.textContent = "Enviar mensaje";
       }
